# kujira-oracle-contract

./: rustfmt.toml
contracts/oracle/: Cargo.toml
contracts/oracle/schema/: oracle.json
contracts/oracle/schema/raw/: execute.json  instantiate.json  query.json  response_to_balances.json  response_to_config.json  response_to_get_config.json  response_to_get_paths.json  response_to_positions.json  response_to_price.json
contracts/oracle/src/: contract.rs  error.rs  state.rs
