[package]
name = "oracle"
version = "0.9.0"
authors = ["theo"]
edition = "2021"

exclude = [
  "oracle.wasm",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
blend = { path = "../../packages/blend"}
blend-kujira = { path = "../../packages/blend-kujira"}
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
kujira = "0.8.2"
thiserror = { version = "1.0.31" }
mars-owner = "1.2.0"
